# Intersection_of_triangles

./: CMakeLists.txt  main.cpp  makefile  readme.md  test.txt  test3.txt
.github/workflows/: ci.yml
include/: intersection_of_triangles.hpp
src/: tests.cpp
tests/: test2.txt
tests/src/: tests.cpp
